...
    await search({variables: {term}});
  };

  return (
    <View style={styles.container}>
      <Input
        testID="input"
        inputContainerStyle={styles.inputContainer}
        leftIcon={{
          type: 'font-awesome',
          name: 'search',
          color: theme.colorDarkGrey,
          size: scale(20),
...
          <Text>Something Went Wrong Please Try Again!</Text>
        </View>
      ) : (
        <FlatList
          contentContainerStyle={styles.list}
          data={data?.search ?? []}
          testID="podcastData"
          keyboardShouldPersistTaps="never"
          keyExtractor={item => {
            return (
              String(item.feedUrl) + String(Math.floor(Math.random() * 1000))
            );
          }}
...
