...
        }}
      />
      <MainTab.Screen
        name="Library"
        component={LibraryStackNavigator}
        options={{
          tabBarTestID: 'lib-Tab',
          tabBarIcon: ({focused}) => (
            <LibraryIcon
              color={focused ? theme.colorBlueLight : theme.colorGreyLight}
              size={windowWidth / 14}
            />
          ),
        }}
      />
      <MainTab.Screen
        name="Search"
        component={SearchStackNavigator}
        options={{
          tabBarTestID: 'searchTab',
          tabBarLabel: 'Home',
          tabBarIcon: ({focused}) => (
            <SearchIcon
              color={focused ? theme.colorBlueLight : theme.colorGreyLight}
              size={windowWidth / 14}
            />
...
